MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/AssignmentUser__c.object-meta.xml
<CustomObject>
    <label>Assignment User</label>
    <nameField>
        <displayFormat>AU{00000}</displayFormat>
        <label>Assignment User #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>