MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/Assigned_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tasks__c</fullName>
    <label>Assigned Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>