MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/AssignmentRule__c.field-meta.xml
<CustomField>
    <fullName>AssignmentRule__c</fullName>
    <label>Assignment Rule</label>
    <referenceTo>AssignmentRule__c</referenceTo>
    <relationshipLabel>Assignment Users</relationshipLabel>
    <relationshipName>AssignmentUsers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>