MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Assignment_Users</relationshipName>
    <type>Lookup</type>
</CustomField>