MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/Current_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Load__c</fullName>
    <label>Current Load</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>