MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/FridayEndTime__c.field-meta.xml
<CustomField>
    <fullName>FridayEndTime__c</fullName>
    <label>Friday End Time</label>
    <type>Time</type>
</CustomField>