MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/FridayStartTime__c.field-meta.xml
<CustomField>
    <fullName>FridayStartTime__c</fullName>
    <label>Friday Start Time</label>
    <type>Time</type>
</CustomField>