MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/Leave_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_To_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave To Date</label>
    <type>DateTime</type>
</CustomField>