MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/Leave_Today__c.field-meta.xml
<CustomField>
    <fullName>Leave_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leave Today</label>
    <type>Checkbox</type>
</CustomField>