MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/MaximumCapacity__c.field-meta.xml
<CustomField>
    <fullName>MaximumCapacity__c</fullName>
    <label>Maximum Capacity(Per Day)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>