MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/MondayEndTime__c.field-meta.xml
<CustomField>
    <fullName>MondayEndTime__c</fullName>
    <label>Monday End Time</label>
    <type>Time</type>
</CustomField>