MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/MondayStartTime__c.field-meta.xml
<CustomField>
    <fullName>MondayStartTime__c</fullName>
    <label>Monday Start Time</label>
    <type>Time</type>
</CustomField>