MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/SaturdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>SaturdayEndTime__c</fullName>
    <label>Saturday End Time</label>
    <type>Time</type>
</CustomField>