MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/SundayEndTime__c.field-meta.xml
<CustomField>
    <fullName>SundayEndTime__c</fullName>
    <label>Sunday End Time</label>
    <type>Time</type>
</CustomField>