MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/SundayStartTime__c.field-meta.xml
<CustomField>
    <fullName>SundayStartTime__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>