MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/ThursdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>ThursdayEndTime__c</fullName>
    <label>Thursday End Time</label>
    <type>Time</type>
</CustomField>