MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/ThursdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>ThursdayStartTime__c</fullName>
    <label>Thursday Start Time</label>
    <type>Time</type>
</CustomField>