MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/TuesdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>TuesdayEndTime__c</fullName>
    <label>Tuesday End Time</label>
    <type>Time</type>
</CustomField>