MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/TuesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>TuesdayStartTime__c</fullName>
    <label>Tuesday Start Time</label>
    <type>Time</type>
</CustomField>