MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/WednesdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>WednesdayEndTime__c</fullName>
    <label>Wednesday End Time</label>
    <type>Time</type>
</CustomField>