MODON MRE BPDEV/force-app/main/default/objects/AssignmentUser__c/fields/WednesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>WednesdayStartTime__c</fullName>
    <label>Wednesday Start Time</label>
    <type>Time</type>
</CustomField>